# ui-skia

./: CMakeLists.txt  DEPS  README.md  generate_cmakelists.py  get_libraries.py
lib/skia/win_32/debug/: libpng_static.lib  skia_codec.lib  skia_codec_android.lib  skia_images.lib  skia_opts.lib  skia_opts_avx.lib  skia_opts_avx2.lib  skia_opts_sse41.lib  skia_opts_sse42.lib  skia_opts_ssse3.lib  skia_pdf.lib  skia_ports.lib  skia_sfnt.lib  skia_skgputest.lib  skia_svg.lib  skia_utils.lib  skia_views.lib  skia_xml.lib  skia_xps.lib
lib/skia/win_32/debug/lib/: giflib.lib  libSkKTX.lib  libetc1.lib  libjpeg-turbo.lib  libwebp_dec.lib  libwebp_demux.lib  libwebp_dsp.lib  libwebp_enc.lib  libwebp_utils.lib  zlib.lib
lib/skia/win_32/release/: libjpeg-turbo.lib  libpng_static.lib  libwebp_dec.lib  libwebp_demux.lib  libwebp_dsp.lib  libwebp_enc.lib  libwebp_utils.lib  skia_codec.lib  skia_codec_android.lib  skia_images.lib  skia_opts.lib  skia_opts_sse41.lib  skia_opts_ssse3.lib  skia_ports.lib  skia_sfnt.lib  skia_utils.lib
lib/zlib/win_32/debug/: zlibstaticd.lib
lib/zlib/win_32/release/: zlib.lib  zlibstatic.lib
src/: UIApp.cpp  UIApp.h  main.cppb
