cmake_minimum_required (VERSION 2.8)
project (UI)

# skia
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/android")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/animator")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/c")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/client")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/codec")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/config")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/core")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/device")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/effects")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/gpu")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/images")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/pathops")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/ports")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/private")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/svg")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/utils")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/views")
include_directories ("${PROJECT_SOURCE_DIR}/include/skia/xml")

file(GLOB UI_src
    "${PROJECT_SOURCE_DIR}/src/*.h"
    "${PROJECT_SOURCE_DIR}/src/*.cpp"
)

include_directories ("${PROJECT_SOURCE_DIR}/include")

add_executable (UI ${UI_src})

# windows - release only
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/libpng_static.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_animator.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_codec.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_codec_android.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_core.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_effects.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_images.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_opts.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_opts_avx.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_opts_avx2.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_opts_sse41.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_opts_sse42.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_opts_ssse3.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_pdf.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_ports.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_sfnt.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_skgpu.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_skgputest.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_svg.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_utils.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_views.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_xml.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/skia_xps.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/lib/libetc1.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/lib/libjpeg-turbo.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/lib/libSkKTX.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/lib/libwebp_dec.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/lib/libwebp_demux.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/lib/libwebp_dsp.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/lib/libwebp_enc.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/lib/libwebp_utils.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/lib/zlib.lib)
target_link_libraries(UI ${PROJECT_SOURCE_DIR}/lib/skia/win_32/debug/lib/giflib.lib)
target_link_libraries(UI opengl32.lib)

